fix stempels add press enter to shift transfer, memo toline 1h

--- a/src/components/stempel/stempel.css
+++ b/src/components/stempel/stempel.css
@@ -27,6 +27,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px dashed var(--bgMsg);
 }
 .stempelFormTitle{
     font-size: 16px;
